Integrate generated api-client
